# ode

./: Doxyfile  LICENSE  LICENSE.md  Makefile  Makefile.in  README.md  build.sh  config.h  configure.ac  ode.c  ode.tex  optimal-steps-11-6.mc  optimize.c  optimize.h  prueba-5-4.mc  prueba-rk-6-5.mc  rk-2-2-0-0-0.mc  rk-2-2-0-0-0.xml  rk-2-2-0-0-1.mc  rk-2-2-0-0-1.xml  rk-2-2-1-0-0.xml  rk-2-2-1-0-1.mc  rk-2-2-1-0-1.xml  rk-2-2.mc  rk-3-2-0-0-0.xml  rk-3-2-0-0-1.xml  rk-3-2-1-0-0.xml  rk-3-2-1-0-1.xml  rk-3-3.mc  rk-4-3.mc  rk-4-4.mc  rk-5-4.mc  rk.c  rk.h  rk_2_2.c  rk_2_2.h  rk_3_2.c  rk_3_2.h  rk_3_3.c  rk_3_3.h  (+143 more)
cases/: rk-2-2-0-0-0.mc  rk-2-2-0-0-0.xml  rk-2-2-0-0-1.mc  rk-2-2-1-0-1.xml  rk-3-2-0-0-0.mc  rk-3-2-0-0-0.xml  rk-3-2-0-0-1.mc  rk-3-2-0-0-1.xml  rk-3-2-1-0-0.mc  rk-3-2-1-0-1.mc  rk-3-3-0-0-0.mc  rk-3-3-0-0-0.xml  rk-3-3-0-0-1.mc  rk-3-3-0-0-1.xml  rk-3-3-1-0-0.mc  rk-3-3-1-0-0.xml  rk-3-3-1-0-1.mc  rk-3-3-1-0-1.xml  rk-4-2-0-0-0.xml  rk-4-2-0-0-1.xml  rk-4-2-0-1-0.xml  rk-4-2-0-1-1.xml  rk-4-2-1-0-0.xml  rk-4-2-1-0-1.xml  rk-4-2-1-1-0.xml  rk-4-2-1-1-1.xml  rk-4-3-0-0-0.xml  rk-4-3-0-0-1.xml  rk-4-3-0-1-1.xml  rk-4-3-1-0-1.xml  rk-4-3-1-1-0.xml  rk-4-4-0-0-0.mc  rk-4-4-0-0-0.xml  rk-4-4-0-0-1.xml  rk-4-4-1-0-0.xml  rk-4-4-1-0-1.xml  steps-3-2.mc  steps-3-2.xml  steps-3-3.mc  steps-3-3.xml  (+30 more)
tests/: test-rk-2-2-0-0-0.xml  test-rk-2-2-0-0-1.xml  test-rk-2-2-0-1-0.xml  test-rk-2-2-0-1-1.xml  test-rk-2-2-1-0-0.xml  test-rk-2-2-1-0-1.xml  test-rk-2-2-1-1-0.xml  test-rk-2-2-1-1-1.xml  test-rk-3-2-0-0-0.xml  test-rk-3-2-0-0-1.xml  test-rk-3-2-0-1-0.xml  (+138 more)
